--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "express-session": "*",
     "express-validator": "^3.2.0",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "knockout": "^3.4.2",
     "lodash": "^4.17.4",
     "mongodb": "*",
     "mongoose": "^4.10.3",
+    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-http": "*",
     "passport-local": "^1.0.0",
