--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "^3.2.0",
+    "formidable": "^1.1.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "knockout": "^3.4.2",
@@ -46,6 +47,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "*",
     "path": "^0.12.7",
+    "request": "^2.81.0",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5"
   },
