--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+F:\Color Nerds\Web Design\GitHub Repo's\Tonights Move (Map API Project)\views\partials\test.handlebars
